# xxHash-dev

./: .gitignore  BenchmarkData.json  BenchmarkData.md  CMakeLists.txt  CMakePresets.json
.github/workflows/: scorecard.yml
tests/: CMakeLists.txt
tests/bench/: BenchmarkData.json  BenchmarkData.md  CMakeLists.txt  CMakePresets.json  GenerateGraphs.py  Types.hpp  benchHash.cpp  benchHash.h  benchfn.cpp  benchfn.h  bhDisplay.cpp  bhDisplay.h  hashes.h  main.cpp  timefn.cpp
tests/collisions/: CMakeLists.txt  CMakePresets.json  hashes.h  main.cpp
tests/collisions/allcodecs/: dummy.cpp
